# upositor

./: CMakeLists.txt  README.md
include/upositor/compositor/: interpolator.hpp  keyboard.hpp  output.hpp  server.hpp  toplevel.hpp
include/upositor/interpolator/: lanczos.hpp  lanczos_impl.hpp  nn.hpp  utils.hpp
include/upositor/utils/: container_of.hpp
protocol/: linux-dmabuf-unstable-v1-client-protocol.h  linux-dmabuf-unstable-v1-protocol.c  wlr-input-inhibitor-unstable-v1-protocol.h
src/: interpolator_demos.cpp  keyboard.cpp  keyboard.hpp  main.cpp  output.cpp  output.hpp  output_frame_handler.cpp  output_frame_render.cpp  output_render_surfaces_to_buffer.cpp  output_render_texture_to_output.cpp  outputsurface.cpp  outputsurface.hpp  scaler.cpp  scaler.hpp  server.cpp  server.hpp  toplevel.cpp  toplevel.hpp
src/compositor/: interpolator.cpp  keyboard.cpp  output.cpp  output_frame_handler.cpp  output_frame_render.cpp  output_render_surfaces_to_buffer.cpp  output_render_texture_to_output.cpp  scaler.cpp  server.cpp  toplevel.cpp
src/interpolator/: lanczos.cpp  lanczos_xrgb8888.cpp  nn_xrgb8888.cpp
